feat(api):add confidence switch
