# web/src/service/openapi.json
@@ -82,6 +82,13 @@
                         "name": "offset",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Confidence",
+                        "name": "confidence",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
